# semantic_corpus

./: .gitignore  LICENSE  README.md  TESTING.md  apply_climate_anxiety_review.py  progress_report.md  pyproject.toml  rebuild_html_only.py
config/: aqi_india_pilot.yaml  climate_anxiety_2026.yaml  ocean_heatwaves_2026.yaml  openalex_climate_anxiety.yaml  redalyc_climate_change.yaml  scielo_climate_change.yaml
corpora/akalya_project/: PMC12728184.xml  PMC12780301.xml  PMC13010128.xml  PMC13076769 - Copy.xml  PMC13121153.xml  PMC13161122.xml  PMC13208227.xml  PMC13210694.xml  PMC13258885.xml  PMC13282462.xml  query_run.json  review_table.csv  search_results.json
corpora/aqi_india_pilot/: bag-info.txt  manifest-sha256.txt  manifest-sha512.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
corpora/climate_anxiety_2026/: bag-info.txt  manifest-sha256.txt  manifest-sha512.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
corpora/climate_change_2026/: bag-info.txt  manifest-sha256.txt  manifest-sha512.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
corpora/ocean_heatwaves_2026/: bag-info.txt  manifest-sha256.txt  manifest-sha512.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
corpora/shreya_project/: 4_week_report.docx  Copy_of_corpus_query_review_colab.ipynb  README.md  daily_progress.md  review_table.csv  review_table_editor.html
corpora/subhangi_project/: index.html
docs/: AQI_JSON  aqi_india_corpus_workflow.md  build_review_table.md  chatbot_export_contract.md  colab_corpus_review_notebook.md  development_plan.md  interactive_review.md  orat_plan.md  overview.md  phase1_implementation_summary.md  prisma_flow.md  pygetpapers_ingestion_tests.md  structure_migration_plan.md
docs/ILAKKYA_S/: review_table_curated.csv
docs/akalya_project/: README.md  query_configuration.md
docs/demo/: README.md  climateinsight_manifest_adapter_plan.md  ocean_heatwaves_demo.md  ocean_heatwaves_progress.md  ocean_heatwaves_proposal.md
docs/diagrams/: architecture.gv  cli_workflow.gv  corpus_structure.gv  ingestion_workflow.gv  preservation.gv  system_flow.gv  transformation.gv
docs/records/: 2026-07-04_html_review_table.md  2026-07-16_ocean_heatwaves_demo.md  2026-07-17_ocean_heatwaves_ingest.md
docs/sessions/: 2025-01-27.md  2025-10-07.md  (+1 more)
examples/: 01_create_corpus.py  02_bagit_operations.py  03_repository_search_download.py  04_metadata_processing.py  05_list_papers.py  06_get_paper_metadata.py  07_search_papers.py  08_corpus_statistics.py  09_ingest_from_europe_pmc.py  10_validate_corpus.py  11_aqi_india_workflow.py  README.md
notebooks/: corpus_query_review_colab.ipynb
scripts/: build_example_corpus.py  build_review_table.py  build_shreya_review_table.py  classify_review_table.py  interactive_review.py  review_viewer.py
semantic_corpus/: __init__.py  cli.py  utils.py
semantic_corpus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
shreya_project/: daily_progress  review_table (1).csv  review_table.csv
temp/: README.md
tests/: __init__.py  conftest.py  test_aqi_corpus_review.py  test_classification.py  test_cli.py  test_corpus_bagit.py  test_corpus_core.py  test_download_completeness.py  test_html_review_viewer.py  test_integration_live.py  test_interactive_review.py  test_metadata_processing.py  test_prisma_flow.py  test_pygetpapers_ingestion.py  test_repository_adapters.py  test_repository_adapters_live.py  test_repository_interface.py  test_review_table_html.py  test_review_viewer_server.py  test_storage.py  test_text_preview_paths.py
(+710 files in other folders)
